--- a/.github/workflows/build-pdf.yml
+++ b/.github/workflows/build-pdf.yml
@@ -171,11 +171,13 @@ jobs:
           name: flags
           path: ${{ runner.temp }}/flags/
 
-      - name: Install dependencies
-        if: ${{ startsWith(runner.name, 'GitHub Actions') || runner.name == 'Hosted Agent' }}
+      - name: Env
         run: |
           echo "$RUNNER_CONTEXT"
 
+      - name: Install dependencies
+        if: ${{ startsWith(runner.name, 'GitHub Actions') || runner.name == 'Hosted Agent' }}
+        run: |
           bash -c "$(curl -fsSL https://raw.githubusercontent.com/ioi-2017/tps/master/online-installer/install.sh)"
 
           wget https://github.com/jgm/pandoc/releases/download/2.10.1/pandoc-2.10.1-1-amd64.deb
