--- a/.github/workflows/build-tests.yml
+++ b/.github/workflows/build-tests.yml
@@ -31,6 +31,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Dump runner context
+        env:
+          RUNNER_CONTEXT: ${{ toJSON(runner) }}
+        run: echo "$RUNNER_CONTEXT"
+
       - name: Read problems
         id: problem-list
         run: |
