--- a/.github/workflows/list-subtasks.yml
+++ b/.github/workflows/list-subtasks.yml
@@ -17,6 +17,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Dump runner context
+        env:
+          RUNNER_CONTEXT: ${{ toJSON(runner) }}
+        run: echo "$RUNNER_CONTEXT"
+
       - name: List subtasks
         shell: python3 {0}
         run: |
