--- a/.github/workflows/build-pdf.yml
+++ b/.github/workflows/build-pdf.yml
@@ -100,11 +100,6 @@ jobs:
         run: |
           echo "${{ matrix.problem }}" > $RUNNER_TEMP/flags/all/${{ matrix.problem }}
 
-      - name: Set merge flag
-        if: ${{ contains(github.event.head_commit.message, '[merge pdf]') }}
-        run: |
-          echo "+" > $RUNNER_TEMP/flags/build-pdf/+
-
       - name: Upload flags
         uses: actions/upload-artifact@v2
         with:
@@ -141,11 +136,6 @@ jobs:
         run: |
           echo "${{ matrix.problem }}" > $RUNNER_TEMP/flags/all/${{ matrix.problem }}
 
-      - name: Set merge flag
-        if: ${{ contains(github.event.inputs.target, '+') }}
-        run: |
-          echo "+" > $RUNNER_TEMP/flags/build-pdf/+
-
       - name: Upload flags
         uses: actions/upload-artifact@v2
         with:
@@ -166,6 +156,11 @@ jobs:
         with:
           name: flags
           path: ${{ runner.temp }}/flags/
+
+      - name: Set merge flag
+        if: ${{ contains(github.event.head_commit.message, '[merge pdf]') || contains(github.event.inputs.target, '+') }}
+        run: |
+          echo "+" > $RUNNER_TEMP/flags/build-pdf/+
 
       - name: Check target
         id: check-post
