Fix verify usage

--- a/.github/workflows/tps-verify.yml
+++ b/.github/workflows/tps-verify.yml
@@ -57,5 +57,6 @@ jobs:
 
       - name: Verify
         if: ${{ (github.event_name == 'push' && steps.changes.outputs.any == 'true') || (github.event_name == 'workflow_dispatch' && contains(github.event.inputs.target, matrix.problem)) }}
-        working-directory: p${{ matrix.problem }}
         uses: TNFSH-Programming-Contest/tps-actions/tree/main/.github/actions/verify@main
+        with:
+          path: p${{ matrix.problem }}
