--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,4 +1,4 @@
-name: test
+name: Test
 on:
   push:
     branches:
@@ -11,4 +11,9 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Changes
+        id: changes
         uses: TNFSH-Programming-Contest/tps-actions/.github/actions/get-changes@main
+
+      - name: Dump
+        run: |
+          echo ${{ steps.changes.outputs.changes }}
