--- a/.github/workflows/tps-verify.yml
+++ b/.github/workflows/tps-verify.yml
@@ -8,11 +8,11 @@ on:
       - 'p*/**'
   workflow_dispatch:
     inputs:
-      target:
+      problems:
         description: 'Problem labels to verify'
 
 jobs:
   run:
     uses: TNFSH-Programming-Contest/tps-actions/.github/workflows/tps-verify.yml@main
     with:
-      problems: ${{ github.event.inputs.target }}
+      problems: ${{ github.event.inputs.problems }}
