--- a/.github/workflows/build-pdf.yml
+++ b/.github/workflows/build-pdf.yml
@@ -27,5 +27,5 @@ jobs:
   run:
     uses: TNFSH-Programming-Contest/tps-actions/.github/workflows/build-pdf.yml@main
     with:
-      problems: ${{ github.event.inputs.problems }}
-      merge: ${{ github.event.inputs.merge }}
+      problems: ${{ inputs.problems }}
+      merge: ${{ inputs.merge }}
