--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,12 +2,10 @@ name: Test
 
 on:
   workflow_dispatch:
-    inputs:
-      problems:
-        description: 'Problem labels to verify'
 
 jobs:
   test:
+    run-on: ubuntu-latest
     steps:
       - run: |
           echo "::notice title=Notice::test messages"
