--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,10 +11,10 @@ jobs:
           echo "::notice title=Notice::test messages"
 
       - run: |
-          echo "::warning title=Warning::test messages"
+          echo "::warning title=Warning::test%0Amessages"
 
       - run: |
-          echo "::error title=Error::test messages"
+          echo "::error title=Error::test\nmessages"
 
       - run: |
           echo "1" >> test.txt
