--- a/.github/workflows/build-pdf.yml
+++ b/.github/workflows/build-pdf.yml
@@ -7,6 +7,7 @@ on:
     paths:
       - '*/scripts/statement.sh'
       - '*/statement/*.jpg'
+      - '*/statement/*.png'
       - '*/statement/DISABLE_AUTO_BUILD'
       - '*/statement/index.md'
       - '*/problem.json'
